--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -35,29 +35,31 @@
         </div>
     </nav>
 
-    <nav aria-label="submenu" class="content-wrapper d-none"> 
-            <ul class="submenu ">
-            <li><a href="./legal-notice.html">Legal Notice</a></li>
-            <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="#">Log Out</a></li>
-        </ul>
-    </nav>
-
     <div class="site-wrapper">
-        <header id="header">
-            <div class="header__content content-wrapper">
-                <span id="page-title">Kanban Project Management Tool</span>
-                <div id="info-container" class="info-container">
-                    <a href="./help.html">
-                        <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                    </a>
-                    <div class="header__user-info">
-                        <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                        <span>SM</span>
+        <div class="site-wrapper">
+            <header id="header">
+                <div class="header-wrapper">
+                    <div class="header__content content-wrapper">
+                        <span id="page-title">Kanban Project Management Tool</span>
+                        <div id="info-container" class="info-container">
+                            <a href="./help.html">
+                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                            </a>
+                            <div class="header__user-info">
+                                <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                                <span>SM</span>
+                            </div>
+                        </div>
                     </div>
+                    <nav aria-label="user drop down menu" class="d-none"> 
+                        <ul class="user-drop-down-menu">
+                            <li><a href="./legal-notice.html">Legal Notice</a></li>
+                            <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="#">Log Out</a></li>
+                        </ul>
+                    </nav>
                 </div>
-            </div>
-        </header>
+            </header>
 
         <main>
             <div id="data-privacy-page-container" class="content">
