--- a/pages/board.html
+++ b/pages/board.html
@@ -87,7 +87,7 @@
                             <div id=to-do-container class="board__table__column">
                                 <span>
                                     <h2>To do</h2>
-                                    <img src="../assets/img/add-btn-border.svg" alt="add task to 'to do'">
+                                    <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'to do'">
                                 </span>
                                 <div id="to-do-tasks" class="tasks">
                                     <div class="no-tasks-placeholder">No active tasks</div>
@@ -97,7 +97,7 @@
                             <div id="in-progress-container" class="board__table__column">
                                 <span>
                                     <h2>In Progress</h2>
-                                    <img src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'">
+                                    <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'">
                                 </span>
                                 <div id="in-progress-tasks" class="tasks">
                                     <div class="task">
@@ -126,7 +126,7 @@
 
                             <div id="await-feedback-container" class="board__table__column">
                                 <span><h2>Await Feedback</h2> 
-                                    <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'">
+                                    <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'">
                                 </span>
                                 <div id="await-feedback-tasks" class="tasks">
                                     <div class="task">
