--- a/pages/board.html
+++ b/pages/board.html
@@ -112,9 +112,9 @@
                                         </div>
                                         <div class="task_assignment-and-priority-box">
                                              <div class="task_assignments"> <!-- user images nur zur veranschaulichung. wird später mit JS gerendert -->
-                                                <img class="user-img" id="${user.id}" src="../assets/img/user-img-anna.svg" alt="User Image or initials">
-                                                <img class="user-img" id="${user.id}" src="../assets/img/user-img-david.svg" alt="User Image or initials">
-                                                <img class="user-img" id="${user.id}" src="../assets/img/user-img-sofia.svg" alt="User Imare or initials">
+                                                <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-anna.svg" alt="User Image or initials">
+                                                <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-david.svg" alt="User Image or initials">
+                                                <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-sofia.svg" alt="User Imare or initials">
                                             </div>
                                             <div class="task_priority">
                                                 <img class="user-img" id="priority" class="task_priority" src="../assets/img/priority-medium.svg" alt="">
@@ -137,9 +137,9 @@
                                         </div>
                                         <div class="task_assignment-and-priority-box">
                                              <div class="task_assignments"> <!-- user images nur zur veranschaulichung. wird später mit JS gerendert -->
-                                                <img class="user-img" id="${user.id}" src="../assets/img/user-img-anna.svg" alt="User Image or initials">
-                                                <img class="user-img" id="${user.id}" src="../assets/img/user-img-david.svg" alt="User Image or initials">
-                                                <img class="user-img" id="${user.id}" src="../assets/img/user-img-sofia.svg" alt="User Imare or initials">
+                                                <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-anna.svg" alt="User Image or initials">
+                                                <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-david.svg" alt="User Image or initials">
+                                                <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-sofia.svg" alt="User Imare or initials">
                                             </div>
                                             <div class="task_priority">
                                                 <img class="user-img" id="priority" class="task_priority" src="../assets/img/priority-low.svg" alt="">
@@ -157,6 +157,9 @@
                     </section>
                 </div>
             </main>
-        </div>    
+        </div>
+    <dialog>
+        
+    </dialog>    
     </body>
 </html>
