--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -101,7 +101,7 @@
                                         <option value="2">Option2</option>
                                     </select>
                                 </div>
-                                <div class="add-task__field">
+                                <div class="add-task__field subtasks__input--border-color">
                                     <label for="subtasks">Subtasks</label>
                                     <input type="subtasks" placeholder="Add new subtask">
                                 </div>
