--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -32,7 +32,7 @@
         </nav>
         
         <div class="site-wrapper">
-            <header id="header">
+            <header class="header" id="header">
                 <div class="header-wrapper">
                     <div class="header__content content-wrapper">
                         <span id="page-title">Kanban Project Management Tool</span>
