--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
 <html lang="de">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <title>Kanban Board</title>
-        <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="/style.css">
-        <link rel="stylesheet" href="/styles/login.css">
+    <title>Kanban Board</title>
+    <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
 
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/navigation.css">
-        <link rel="stylesheet" href="/styles/board.css">
-        <link rel="stylesheet" href="/styles/add_task.css">
-        <link rel="stylesheet" href="/styles/dialog_add_contact.css">
-        <link rel="stylesheet" href="/styles/contacts.css">
-        <link rel="stylesheet" href="/styles/summary.css">
-        <link rel="stylesheet" href="/styles/data_privacy.css">
-        <link rel="stylesheet" href="/styles/legal_notes.css">
-    </head>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/navigation.css">
+    <link rel="stylesheet" href="../styles/contacts.css">
 
-    <body>
-        <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
-            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-            <div class="nav-menu__btn-container">
-                <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
-            </div>
-            <div class="nav-menu__bottom__btn">
-                <a href="./privacy-policy.html">Privacy Policy</a>
-                <a href="./legal-notice.html">Legal Notice</a>
-            </div>
-        </nav>
+</head>
 
+<body>
+    <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
+        <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+        <div class="nav-menu__btn-container">
+            <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+            <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+            <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+            <a class="nav-btn--selected deactivated" href="./contacts.html"><img src="../assets/img/contacts.svg"
+                    alt="Contacts">Contacts</a>
+        </div>
+        <div class="nav-menu__bottom__btn">
+            <a href="./privacy-policy.html">Privacy Policy</a>
+            <a href="./legal-notice.html">Legal Notice</a>
+        </div>
+    </nav>
+
+    <div class="site-wrapper">
         <div class="site-wrapper">
-            <div class="site-wrapper">
             <header id="header">
                 <div class="header-wrapper">
                     <div class="header__content content-wrapper">
                         <span id="page-title">Kanban Project Management Tool</span>
                         <div id="info-container" class="info-container">
                             <a href="./help.html">
-                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                                <img id="help-img" class="help-img" src="../assets/img/help.svg"
+                                    alt="Help question mark">
                             </a>
                             <div class="header__user-info">
                                 <img src="../assets/img/user-ellipse.svg" alt="User picture">
@@ -53,7 +48,7 @@
                             </div>
                         </div>
                     </div>
-                    <nav aria-label="user drop down menu" class="d-none"> 
+                    <nav aria-label="user drop down menu" class="d-none">
                         <ul class="user-drop-down-menu">
                             <li><a href="./legal-notice.html">Legal Notice</a></li>
                             <li><a href="./privacy-policy.html">Privacy Policy</a></li>
@@ -67,32 +62,71 @@
                 <div id="contacts_page_container" class="content">
                     <section id="contacts_content">
 
+                        <div class="content-left">
+                            <button class="filled-btn">Add new contact<img src="../assets/img/person-add.svg"
+                                    alt="icon of a person with a plus-symbol"></button>
+                            <div class="contact-list">
+                                <!-- Hier werden später die Kontake reingerendert -->
+                                <div>
+                                    <p class="contact-list__initial-letter">A</p>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="content-right">
+                            <div class="content-right__header">
+                                <h1>Contacts</h1>
+                                <div class="header__bluestrip"></div>
+                                <span>Better with a team</span>
+                            </div>
+
+                            <div class="content-right__rendered-card">
+                                <div class="rendered-card__header">
+                                    <img src="../assets/img/user-img-anna.svg"
+                                        alt="colored circle with starting letters of name and surname">
+                                    <div class="header__display-contact">
+                                        <h3>Max Mustermann</h3>
+                                        <div class="manage-contact">
+                                            <span class="manage-contact__edit">
+                                                <img src="../assets/img/edit.svg" alt="a grey pencil">
+                                                Edit</span>
+                                            <span class="manage-contact__delete">
+                                                <img src="../assets/img/delete.svg" alt="a grey trashbin">
+                                                Delete</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <p class="info-header">Contact Information</p>
+                                <div class="contact-details">
+                                    <p><strong>Email</strong></p>
+                                    <p>max.mustermann@web.de</p>
+                                    <p><strong>Phone</strong></p>
+                                    <p>+49 1111 111 111</p>
+                                </div>
+
+                            </div>
+                        </div>
                     </section>
                 </div>
             </main>
         </div>
-
-        <script src="./script.js"></script>
-        <script src="./scripts/login.js"></script>
-        <script src="./scripts/main.js"></script>
-        <script src="./scripts/navigation.js"></script>
-
-        <script src="./scripts/board.js"></script>
-        <script src="./scripts/drag_and_drop.js"></script>
-        <script src="./scripts/ticket.js"></script>
-
-        <script src="./scripts/add_task.js"></script>
-        <script src="./scripts/dialog_add_contact.js"></script>
-        <script src="./scripts/contacts.js"></script>
-        <script src="./scripts/greetings.js"></script>
-        <script src="./scripts/summary.js"></script>
-
-        <script src="./templates/tpl_login.js"></script>
-        <script src="./templates/tpl_ticket.js"></script>
-        <script src="./templates/tpl_navigation.js"></script>
-        <script src="./templates/tpl_board.js"></script>
-        <script src="./templates/tpl_add_task.js"></script>
-        <script src="./templates/tpl_summary.js"></script>
-    </body>
+</body>
 
 </html>
