--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -60,7 +60,7 @@
             </div>
         </header>
 
-        <main>
+        <main class="main-content">
             <div id="data-privacy-page-container" class="content">
                 <section id="data-privacy-content" class="data-privacy-content content-wrapper">
                     <h1>Privacy Policy</h1>
