Add flex-wrap for resposivness

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -31,8 +31,9 @@
         </div>
     </nav>
 
+    <div class="site-wrapper">
         <div class="site-wrapper">
-            <header class="header" id="header">
+            <header id="header">
                 <div class="header-wrapper">
                     <div class="header__content content-wrapper">
                         <span id="page-title">Kanban Project Management Tool</span>
@@ -62,12 +63,135 @@
                     <section id="contacts_content">
 
                         <div class="content-left">
-                            <button class="filled-btn">Add new contact<img src="../assets/img/person-add.svg"
+                            <div class="button-holder">
+                                <button class="filled-btn">Add new contact<img src="../assets/img/person-add.svg"
                                     alt="icon of a person with a plus-symbol"></button>
+                            </div>
+                            
                             <div class="contact-list">
                                 <!-- Hier werden später die Kontake reingerendert -->
                                 <div>
-                                    <p class="contact-list__initial-letter">A</p>
+                                    <p class="contact-list__initial-letter">M</p>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
+                                    <div class="contact-list__item">
+                                        <img src="../assets/img/user-img-anna.svg"
+                                            alt="colored circle with starting letters of name and surname">
+                                        <div>
+                                            <p id="contact-name">Max Mustermann</p>
+                                            <p id="contact-email">max.mustermann@web.de</p>
+                                        </div>
+                                    </div>
                                     <div class="contact-list__item">
                                         <img src="../assets/img/user-img-anna.svg"
                                             alt="colored circle with starting letters of name and surname">
