--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -13,7 +13,7 @@
 <body>
     <header class="content-wrapper header">
         <img class="header__joinlogo" src="../assets/img/logo-black.png"
-            alt="the word: join with a big J with a blue dot on the left side,">
+            alt="the word: join with a big J with a blue dot on the left side">
     </header>
 
     <main class="content-wrapper">
