--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/contacts.css">
+    <link rel="stylesheet" href="../styles/dlg-add-contact.css">
 
 </head>
 
