added class d-none in dlg for better working on the site

--- a/pages/board.html
+++ b/pages/board.html
@@ -160,8 +160,8 @@
             </main>
         </div>
 
-    <div id="overlay" class="overlay"></div>
-    <dialog class="dlg">
+    <div id="overlay" class="overlay d-none"></div>
+    <dialog class="dlg d-none">
         <header class="dlg_header">
            <span class="dlg_header_task-category">${task.category}</span>
            <img class="dlg_close-btn" src="../assets/img/close-delete-cross.svg" alt=""> 
